--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
     <link rel="icon" type="image/png" href="/favicon.png" />
 
     <style>
       @font-face {
-        font-family: 'Crimson Pro';
+        font-family: "Crimson Pro";
         font-style: italic;
         font-weight: 200 900;
         font-display: fallback;
-        src: url('/fonts/crimson-pro-italic.woff2') format('woff2');
+        src: url("/fonts/crimson-pro-italic.woff2") format("woff2");
       }
       @font-face {
-        font-family: 'Crimson Pro';
+        font-family: "Crimson Pro";
         font-style: normal;
         font-weight: 200 900;
         font-display: fallback;
-        src: url('/fonts/crimson-pro.woff2') format('woff2');
+        src: url("/fonts/crimson-pro.woff2") format("woff2");
       }
       @font-face {
-        font-family: 'Chomsky';
+        font-family: "Chomsky";
         font-style: normal;
         font-weight: 700;
         font-display: block;
-        src: url('/fonts/chomsky.woff2') format('woff2');
+        src: url("/fonts/chomsky.woff2") format("woff2");
       }
     </style>
 
